// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render a checkbox partially checked 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="ui-checkbox ui-checkbox--medium emotion-0 emotion-1"
  data-test="ui-checkbox"
  name={undefined}
  style={Object {}}
>
  <input
    checked={false}
    disabled={false}
    id="checkbox3"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="checkbox3"
    onClick={undefined}
  >
    <div
      className="ui-checkbox__label-group"
    >
      <span
        className="ui-checkbox__label"
      >
        Stay up to date
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render a checkbox with label 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="ui-checkbox ui-checkbox--medium emotion-0 emotion-1"
  data-test="ui-checkbox"
  name={undefined}
  style={Object {}}
>
  <input
    checked={true}
    disabled={false}
    id="checkbox2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="checkbox2"
    onClick={undefined}
  >
    <div
      className="ui-checkbox__label-group"
    >
      <span
        className="ui-checkbox__label"
      >
        Stay up to date
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="ui-checkbox ui-checkbox--medium emotion-0 emotion-1"
  data-test="ui-checkbox"
  name={undefined}
  style={Object {}}
>
  <input
    checked={true}
    disabled={false}
    id="checkbox1"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="checkbox1"
    onClick={undefined}
  />
</div>
`;
